feat: Support fare_media.txt with GTFSFareMedia
fix: Timeframe can now be loaded from the database
feat: update GTFS database, built with the latest version of node-gtfs

--- a/Sources/MetroGTFStoSQLite/gtfs-config.json
+++ b/Sources/MetroGTFStoSQLite/gtfs-config.json
@@ -1,7 +1,7 @@
 {
   "agencies": [
     {
-      "path": "rail-gtfs-static.zip"
+      "path": "wmata-gtfs-rail-static.zip"
     }
   ],
   "ignoreDuplicates": true,
